--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Tako Neko <oct8cat@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "jsdoc": "^3.3.0-beta3",
     "jshint": "^2.7.0",
     "mocha": "^2.2.4"
   },
